--- a/style.css
+++ b/style.css
@@ -1,705 +1,329 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap');
-
-:root{
-    --orange:#ff7800;
-    --black:#130f40;
-    --light-color:#666;
-    --box-shadow:0 .5rem 1.5rem rgba(0,0,0,.1);
-    --border:.2rem solid rgba(0,0,0,.1);
-    --outline:.1rem solid rgba(0,0,0,.1);
-    --outline-hover:.2rem solid var(--black);
-}
-
-*{
-    font-family: 'Poppins', sans-serif;
-    margin:0; padding:0;
-    box-sizing: border-box;
-    outline: none; border:none;
-    text-decoration: none;
-    text-transform: capitalize;
-    transition: all .2s linear;
-}
-
-html{
-    font-size: 62.5%;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-    scroll-padding-top: 7rem;
-}
-
+/* this is section 1 css -----------------------*/
 body{
-    background:#eee;
+    background: white;
+    margin: 0px;
 }
 
-section{
-    padding:2rem 9%;
+#bg-img{
+    height: 895px;
+    background-repeat: no-repeat;
+    background-position: top center;
 }
 
-.heading{
-    text-align: center;
-    padding:2rem 0;
-    padding-bottom: 3rem;
-    font-size: 3.5rem;
-    color:var(--black);
-}
-
-.heading span{
-    background: var(--orange);
-    color:#fff;
-    display: inline-block;
-    padding:.5rem 3rem;
-    clip-path: polygon(100% 0, 93% 50%, 100% 99%, 0% 100%, 7% 50%, 0% 0%);
-}
-
-.btn{
-    margin-top: 1rem;
-    display: inline-block;
-    padding:.8rem 3rem;
-    font-size: 1.7rem;
-    border-radius: .5rem;
-    border:.2rem solid var(--black);
-    color:var(--black);
-    cursor: pointer;
-    background: none;
-}
-
-.btn:hover{
-    background: var(--orange);
-    color:#fff;
-}
-
-.header{
-    position: fixed;
-    top:0; left:0; right: 0;
-    z-index: 1000;
+.navbar{
     display: flex;
+    list-style: none;
     align-items: center;
     justify-content: space-between;
-    padding:2rem 9%;
-    background:#fff;
-    box-shadow: var(--box-shadow);
+    width: 90%;
+    margin: auto;
 }
 
-.header .logo{
-    font-size: 2.5rem;
-    font-weight: bolder;
-    color:var(--black);
+a{
+    text-decoration: none;
+    color: white;
 }
 
-.header .logo i{
-    color:var(--orange);
-}
-
-.header .navbar a{
-    font-size: 1.7rem;
-    margin:0 1rem;
-    color:var(--black);
-}
-
-.header .navbar a:hover{
-    color:var(--orange);
-}
-
-.header .icons div{
-    height: 4.5rem;
-    width: 4.5rem;
-    line-height: 4.5rem;
-    border-radius: .5rem;
-    background: #eee;
-    color:var(--black);
-    font-size: 2rem;
-    margin-left: .3rem;
-    cursor: pointer;
-    text-align: center;
-}
-
-.header .icons div:hover{
-    background: var(--orange);
-    color:#fff;
-}
-
-#menu-btn{
-    display: none;
-}
-
-.header .search-form{
-    position: absolute;
-    top:110%; right:-110%;
-    width: 50rem;
-    height:5rem;
-    background: #fff;
-    border-radius: .5rem;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    box-shadow: var(--box-shadow);
-}
-
-.header .search-form.active{
-    right:2rem;
-    transition: .4s linear;
-}
-
-.header .search-form input{
-    height:100%;
-    width:100%;
-    background: none;
-    text-transform: none;
-    font-size: 1.6rem;
-    color:var(--black);
-    padding:0 1.5rem;
-}
-
-.header .search-form label{
-    font-size: 2.2rem;
-    padding-right: 1.5rem;
-    color:var(--black);
-    cursor: pointer;
-}
-
-.header .search-form label:hover{
-    color:var(--orange);
-}
-
-.header .shopping-cart{
-    position: absolute;
-    top:110%; right:-110%;
-    padding:1rem;
-    border-radius: .5rem;
-    box-shadow: var(--box-shadow);
-    width:35rem;
-    background: #fff;
-}
-
-.header .shopping-cart.active{
-    right:2rem;
-    transition: .4s linear;
-}
-
-.header .shopping-cart .box{
-    display: flex;
-    align-items: center;
-    gap:1rem;
-    position: relative;
-    margin:1rem 0;
-}
-
-.header .shopping-cart .box img{
-    height:10rem;
-}
-
-.header .shopping-cart .box .fa-trash{
-    font-size: 2rem;
-    position: absolute;
-    top:50%; right:2rem;
-    cursor: pointer;
-    color:var(--light-color);
-    transform: translateY(-50%);
-}
-
-.header .shopping-cart .box .fa-trash:hover{
-    color:var(--orange);
-}
-
-.header .shopping-cart .box .content h3{
-    color:var(--black);
-    font-size: 1.7rem;
-    padding-bottom: 1rem;
-}
-
-.header .shopping-cart .box .content span{
-    color:var(--light-color);
-    font-size: 1.6rem;
-}
-
-.header .shopping-cart .box .content .quantity{
-    padding-left: 1rem;
-}
-
-.header .shopping-cart .total{
-    font-size: 2.5rem;
-    padding:1rem 0;
-    text-align: center;
-    color:var(--black);
-}
-
-.header .shopping-cart .btn{
-    display: block;
-    text-align: center;
-    margin:1rem;
-}
-
-.header .login-form{
-    position: absolute;
-    top:110%; right:-110%;
-    width:35rem;
-    box-shadow: var(--box-shadow);
-    padding:2rem;
-    border-radius: .5rem;
-    background: #fff;
-    text-align: center;
-}
-
-.header .login-form.active{
-    right:2rem;
-    transition: .4s linear;
-}
-
-.header .login-form h3{
-    font-size: 2.5rem;
-    text-transform: uppercase;
-    color: var(--black);
-}
-
-.header .login-form .box{
-    width: 100%;
-    margin:.7rem 0;
-    background:#eee;
-    border-radius: .5rem;
-    padding:1rem;
-    font-size: 1.6rem;
-    color:var(--black);
-    text-transform: none;
-}
-
-.header .login-form p{
-    font-size: 1.4rem;
-    padding:.5rem 0;
-    color:var(--light-color);
-}
-
-.header .login-form p a{
-    color:var(--orange);
+a:hover{
     text-decoration: underline;
 }
 
-.home{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: url(../image/banner-bg.webp) no-repeat;
-    background-position: center;
-    background-size: cover;
-    padding-top: 17rem;
-    padding-bottom: 10rem;
+.logo{      
+    border: 5px solid white;
+    padding: 15px 10px 10px;
 }
 
-.home .content{
+header {
+    background: rgba(0, 0, 0, 0.6);
+    padding: 10px 0;
+}
+
+.d1_1{
+    text-align: right;
+    color: white;
+    margin-top: 0px;
+    padding-right: 15px;
+}
+
+.d1_2{
     text-align: center;
-    width:60rem;
+    color: white;
+    line-height: 275px;
+    font-size: 40px;
 }
 
-.home .content h3{
-    color:var(--black);
-    font-size: 3rem;
+/* this is section 2 css -----------------------*/
+.d2{
+    background-color: white;
+    width: 80%;
+    margin: auto;
+    margin-top: 150px;
+    margin-bottom: 100px;
 }
 
-.home .content h3 span{
-    color:var(--orange);
+.box {
+   text-align: center;
 }
 
-.home .content p{
-    color:var(--light-color);
-    font-size: 1.7rem;
-    padding:1rem 0;
-    line-height: 1.8;
+.icon{
+    background: blue;
+    width: 90px;
+    height: 90px;
+    border-radius: 100px;
+    line-height: 110px;
+    margin: auto;
+    top: -45px;
+    position: relative;
 }
 
-.features .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    gap:1.5rem;
+#d2_1{
+    float: left;
+    width: 33%;
 }
 
-.features .box-container .box{
-    padding:3rem 2rem;
-    background: #fff;
-    outline: var(--outline);
-    outline-offset: -1rem;
-    text-align: center;
-    box-shadow: var(--box-shadow);
+#d2_2{
+    width: 33%;
+    display: inline-block;
 }
 
-.features .box-container .box:hover{
-    outline: var(--outline-hover);
-    outline-offset: 0rem;
+#d2_3{
+    width: 33%;
+    float: right;
 }
 
-.features .box-container .box img{
-    margin:1rem 0;
-    height: 15rem;
-}
-
-.features .box-container .box h3{
-    font-size: 2.5rem;
-    line-height: 1.8;
-    color:var(--black);
-}
-
-.features .box-container .box p{
-    font-size: 1.5rem;
-    line-height: 1.8;
-    color:var(--light-color);
-    padding:1rem 0;
-}
-
-.products .product-slider{
-    padding:1rem;
-}
-
-.products .product-slider:first-child{
-    margin-bottom: 2rem;
-}
-
-.products .product-slider .box{
-    background: #fff;
-    border-radius: .5rem;
-    text-align: center;
-    padding:3rem 2rem;
-    outline-offset: -1rem;
-    outline: var(--outline);
-    box-shadow: var(--box-shadow);
-    transition: .2s linear;
-}
-
-.products .product-slider .box:hover{
-    outline-offset: 0rem;
-    outline: var(--outline-hover);
-}
-
-.products .product-slider .box img{
-    height:20rem;
-}
-
-.products .product-slider .box h3{
-    font-size: 2.5rem;
-    color:var(--black);
-}
-
-.products .product-slider .box .price{
-    font-size: 2rem;
-    color:var(--light-color);
-    padding:.5rem 0;
-}
-
-.products .product-slider .box .stars i{
-    font-size: 1.7rem;
-    color:var(--orange);
-    padding:.5rem 0;
-}
-
-.categories .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(26rem, 1fr));
-    gap:1.5rem;
-}
-
-.categories .box-container .box{
-    padding:3rem 2rem;
-    border-radius: .5rem;
-    background:#fff;
-    box-shadow: var(--box-shadow);
-    outline:var(--outline);
-    outline-offset: -1rem;
+/* this is section 3 css -----------------------*/
+.s3{
+    background-color:#151717 ;
+    color: white;
     text-align: center;
 }
 
-.categories .box-container .box:hover{
-    outline:var(--outline-hover);
-    outline-offset: 0rem;
-}
-
-.categories .box-container .box img{
-    margin:1rem 0;
-    height:15rem;
-}
-
-.categories .box-container .box h3{
-   font-size: 2rem;
-   color:var(--black);
-   line-height: 1.8;
-}
-
-.categories .box-container .box p{
-    font-size: 1.7rem;
-    color:var(--light-color);
-    line-height: 1.8;
-    padding:1rem 0;
-}
-
-.review .review-slider{
-    padding:1rem;
-}
-
-.review .review-slider .box{
-    background: #fff;
-    border-radius: .5rem;
-    text-align: center;
-    padding:3rem 2rem;
-    outline-offset: -1rem;
-    outline: var(--outline);
-    box-shadow: var(--box-shadow);
-    transition: .2s linear;
-}
-
-.review .review-slider .box:hover{
-    outline:var(--outline-hover);
-    outline-offset: 0rem;
-}
-
-.review .review-slider .box img{
-    height:10rem;
-    width:10rem;
-    border-radius: 50%;
-}
-
-.review .review-slider .box p{
-    padding:1rem 0;
-    line-height: 1.8;
-    color:var(--light-color);
-    font-size: 1.5rem;
-}
-
-.review .review-slider .box h3{
-    padding-bottom: .5rem;
-    color:var(--black);
-    font-size: 2.2rem;
-}
-
-.review .review-slider .box .stars i{
-    color:var(--orange);
-    font-size: 1.7rem;
-}
-
-.blogs .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    gap:1.5rem;
-}
-
-.blogs .box-container .box{
-    overflow: hidden;
-    border-radius: .5rem;
-    box-shadow: var(--box-shadow);
-    background:#fff;
-}
-
-.blogs .box-container .box img{
-    height:25rem;
-    width:100%;
-    object-fit: cover;
-}
-
-.blogs .box-container .box .content{
-    padding:2rem;
-}
-
-.blogs .box-container .box .content .icons{
-    display: flex;
-    align-items: center;
+.d3{
+    width: 70%;
+    margin: auto;
+    margin-top: 40px;
+    margin-bottom: 5%;
     justify-content: space-between;
-    padding-bottom: 1.5rem;
-    margin-bottom: 1rem;
-    border-bottom: var(--border);
 }
 
-.blogs .box-container .box .content .icons a{
-    color:var(--light-color);
-    font-size: 1.5rem;
+.d3_1{
+    float: left;
+    width: 20%;
 }
 
-.blogs .box-container .box .content .icons a:hover{
-    color:var(--black);
+.d3_2{
+    width: 25%;
+    display: inline-block;
 }
 
-.blogs .box-container .box .content .icons a i{
-    color:var(--orange);
-    padding-right: .5rem;
+.d3_3{
+    width: 25%;
+    display: inline-block;
 }
 
-.blogs .box-container .box .content h3{
-    line-height: 1.8;
-    color:var(--black);
-    font-size: 2.2rem;
-    padding:.5rem 0;
+.d3_4{
+    width: 20%;
+    float: right;
 }
 
-.blogs .box-container .box .content p{
-    line-height: 1.8;
-    color:var(--light-color);
-    font-size: 1.5rem;
-    padding:.5rem 0;
+.b3{
+    width: 240px;
+    height: 50px;
+    color: white;
+    background-color: #233EDE;
+    margin-bottom: 100px;
+    font-size: 18px;
 }
 
-.footer{
-    background: #fff;
+#p3{
+    color: #7b7b7b;
 }
 
-.footer .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-    gap:1.5rem;
-}
-
-.footer .box-container .box h3{
-    font-size: 2.5rem;
-    color:var(--black);
-    padding:1rem 0;
-}
-
-.footer .box-container .box h3 i{
-    color:var(--orange);
-}
-
-.footer .box-container .box .links{
-    display: block;
-    font-size: 1.5rem;
-    color:var(--light-color);
-    padding:1rem 0;
-}
-
-.footer .box-container .box .links i{
-    color:var(--orange);
-    padding-right: .5rem;
-}
-
-.footer .box-container .box .links:hover i{
-    padding-right: 2rem;
-}
-
-
-.footer .box-container .box p{
-    line-height: 1.8;
-    font-size: 1.5rem;
-    color:var(--light-color);
-    padding:1rem 0;
-}
-
-.footer .box-container .box .share a{
-    height:4rem;
-    width:4rem;
-    line-height:4rem;
-    border-radius: .5rem;
-    font-size: 2rem;
-    color:var(--black);
-    margin-right: .2rem;
-    background: #eee;
+/* this is section 4 css -----------------------*/
+.s4{
+    background-image: url('trainer-bg.jpg');
+    background-size: cover;
     text-align: center;
+    color: white;
 }
 
-.footer .box-container .box .share a:hover{
-    background: var(--orange);
-    color: #fff;
+.d4{
+    width: 70%;
+    margin: auto;
+    justify-content: space-between;
+    padding-bottom: 2%;
 }
 
-.footer .box-container .box .email{
+.d4_1{
+    float: left;
+    width: 33%;
+}
+
+.d4_2{
+    width: 33%;
+    display: inline-block;
+}
+
+.d4_3{
+    width: 33%;
+    float: right;
+}
+
+/* this is section 5 css -----------------------*/
+.d5{
+    width: 80%;
+    margin: auto;
+    text-align: left;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    display: flex;
+    justify-content: space-between;
+}
+.d5_1{
+    float: left;
+    width: 25%;
+    height: 400px;
+}
+
+.d5_2{
+    width: 25%;
+    display: inline-block;
+    height: 400px;
+}
+
+.d5_3{
+    width: 25%;
+    float: right;
+    height: 400px;
+}
+
+.d5_1{
+    border: 2px solid #b8bac9;
+    padding: 30px;
+}
+
+strong{
+    letter-spacing: 4px;
+    color: #7b7b7b;
+}
+
+#head5_1{
+    letter-spacing: 2px;
+    padding-bottom: 10px;
+    margin-bottom: 0px;
+    font-size: 20px;
+}
+
+.t5{
     width: 100%;
-    margin:.7rem 0;
-    padding:1rem;
-    border-radius: .5rem;
-    background: #eee;
-    font-size: 1.6rem;
-    color:var(--black);
-    text-transform: none;
+    color: gray;
+    border-spacing: 10px;
 }
 
-.footer .box-container .box .payment-img{
-    margin-top: 2rem;
-    height: 3rem;
-    display: block;
+.d5_2{
+    background-image: url('woman-exercise.jpg');
+    background-repeat: no-repeat;
+    background-position: top center;
+    border: 10px solid blue;
+    height: 395px;
+    padding: 2.5rem 1.5rem 1.5rem;
+    padding-top: 30px;
+    display: inline-block;
 }
 
-.footer .credit{
+#head5_2{
+    color: blue;
+    font-size: 70px;
+    margin: 0px;
+}
+
+span{
+    font-size: 25px;
+}
+
+.d5_3{
+    color: white;
+    background-image: url('personal-trainer.jpg');
+    background-repeat: no-repeat;
+    padding: 30px;
+    text-align: left;
+}
+
+.b5{
+    cursor: pointer;
+    background: #233EDE;
+    color: white;
+    font-size: 0.9rem;
     text-align: center;
-    margin-top: 2rem;
-    padding:1rem;
-    padding-top: 2.5rem;
-    font-size: 2rem;
-    color:var(--black);
-    border-top: var(--border);
+    font-weight: 500;
+    letter-spacing: 2px;
+    padding: 1.25rem 3rem;
 }
 
-.footer .credit span{
-    color:var(--orange);
+.d5_4{
+    height: 200px;
+    line-height: 200px;
+    text-align: center;
+    padding-top: 10%;
+    padding-right: 15%;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-/* media queries  */
-
-@media (max-width:991px){
-
-    html{
-        font-size: 55%;
-    }
-
-    .header{
-        padding:2rem;
-    }
-
-    section{
-        padding:2rem;
-    }
-
+/* this is section 6 css -----------------------*/
+.s6{
+    background-color: black;
+    background-image: url('footer-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-@media (max-width:768px){
-
-    #menu-btn{
-        display: inline-block;
-    }
-
-    .header .search-form{
-        width:90%;
-    }
-
-    .header .navbar{
-        position: absolute;
-        top:110%; right:-110%;
-        width:30rem;
-        box-shadow: var(--box-shadow);
-        border-radius: .5rem;
-        background: #fff;
-    }
-
-    .header .navbar.active{
-        right:2rem;
-        transition: .4s linear;
-    }
-
-    .header .navbar a{
-        font-size: 2rem;
-        margin:2rem 2.5rem;
-        display: block;
-    }
-
+.d6_1{
+    width: 5%;
+    margin: auto;
+    padding-top: 5%;
 }
 
-@media (max-width:450px){
+.d6_2{
+    width: 70%;
+    margin: auto;
+    padding: 5%;
+    padding-bottom: 0%;
+}
 
-    html{
-        font-size: 50%;
-    }
+.d6_3{
+    text-align: center;
+    width: 55%;
+    margin: auto;
+    padding: 5%;
+}
 
-    .heading{
-        font-size: 2.5rem;
-    }
+#email{
+    width: 300px;
+    height: 50px;
+    border: none;
+}
 
-    .footer{
-        text-align: center;
-    }
+.b6{
+  width: 100px;
+  height: 52px;
+  background: #233EDE;
+  color: white;
+  cursor: pointer;
+  font-size: 0.9rem;
+  text-align: center;
+  font-weight: 500;
+  letter-spacing: 2px;
+}
 
-    .footer .box-container .box .payment-img{
-        margin: 2rem auto;
-    }
+.d6_4{
+  width: 90px;
+  height: 90px;
+  margin: auto;
+  padding: 2%;
+}
 
+.d6_5{
+    color: white;
+    width: 15%;
+    margin: auto;
+    padding: 2%;
 }
